CLOSED FIXED33176
[Qt] The FIRST letter in the PASSWORD field is taken in UPPERCASE by DEFAULT in gmail.com web page
https://bugs.webkit.org/show_bug.cgi?id=33176
Summary [Qt] The FIRST letter in the PASSWORD field is taken in UPPERCASE by DEFAULT ...
Vikram
Reported 2010-01-04 12:35:20 PST
This error occurs in landscape mode. STEPS TO REPRODUCE: 1.Load page http://www.gmail.com. 2. enter username: 'browsernk' and password: 'boston123'. Press the "sign in" button ACTUAL RESULTS: Error message saying "The username and password you entered is incorrect" EXPECTED RESULTS: log into the page and display the e-mail list.
Attachments
Disable predictive text and auto upper case for Symbian (as maemo does). (1.41 KB, patch)
2010-03-23 15:50 PDT, Viatcheslav Ostapenko
no flags
Updated patch with modified comment (1.48 KB, patch)
2010-03-24 08:22 PDT, Viatcheslav Ostapenko
no flags
Vikram
Comment 1 2010-01-04 12:36:31 PST
(In reply to comment #0) > This error occurs in landscape mode. > STEPS TO REPRODUCE: > 1.Load page http://www.gmail.com. > 2. enter username: 'browsernk' and password: 'boston123'. Press the "sign in" > button > ACTUAL RESULTS: > Error message saying "The username and password you entered is incorrect" > EXPECTED RESULTS: > log into the page and display the e-mail list. Internally linked to - https://qtrequirements.europe.nokia.com/browse/BR-1101
Hui Huang
Comment 2 2010-01-08 11:37:22 PST
Working on this bug.
Tor Arne Vestbø
Comment 3 2010-03-05 09:39:39 PST
Please follow the QtWebKit bug reporting guidelines when reporting bugs. See http://trac.webkit.org/wiki/QtWebKitBugs Specifically: - The 'QtWebKit' component should be used for bugs/features in the public QtWebKit API layer, not to signify that the bug is specific to the Qt port of WebKit http://trac.webkit.org/wiki/QtWebKitBugs#Component
Janne Koskinen
Comment 4 2010-03-16 02:27:38 PDT
Eh ? isn't this how it is supposed to be depending on your input mode? predictive mode should always be disabled for password fields. Upper/Lower case input should still be possible.
Benjamin Poulain
Comment 5 2010-03-17 03:19:06 PDT
Assigning to Hui Huang since he said he is working on this bug.
Hui Huang
Comment 6 2010-03-18 11:37:01 PDT
auto-uppercase and predictive text probably need to be disabled for S60: Changeset 54064(http://trac.webkit.org/changeset/54064).
Janne Koskinen
Comment 7 2010-03-18 11:41:55 PDT
(In reply to comment #6) > auto-uppercase and predictive text probably need to be disabled for S60: > Changeset 54064(http://trac.webkit.org/changeset/54064). I think you are right. I tried the current version and it is very annoying to use.
Viatcheslav Ostapenko
Comment 8 2010-03-23 15:50:30 PDT
Created attachment 51465 [details] Disable predictive text and auto upper case for Symbian (as maemo does).
Viatcheslav Ostapenko
Comment 9 2010-03-24 08:22:05 PDT
Created attachment 51498 [details] Updated patch with modified comment
Laszlo Gombos
Comment 10 2010-03-24 08:52:28 PDT
Comment on attachment 51498 [details] Updated patch with modified comment lgtm, r+. Thanks.
WebKit Commit Bot
Comment 11 2010-03-24 14:12:58 PDT
Comment on attachment 51498 [details] Updated patch with modified comment Clearing flags on attachment: 51498 Committed r56458: <http://trac.webkit.org/changeset/56458>
WebKit Commit Bot
Comment 12 2010-03-24 14:13:04 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 13 2010-04-16 16:52:37 PDT
(In reply to comment #11) > (From update of attachment 51498 [details]) > Clearing flags on attachment: 51498 > > Committed r56458: <http://trac.webkit.org/changeset/56458> Cherry-picked into qtwebkit-4.6 with commit 739bd26533e86de8d4070121903f9d688c2db257
Simon Hausmann
Comment 14 2010-06-04 00:48:30 PDT
Revision r56458 cherry-picked into qtwebkit-2.0 with commit 903617844b4341f7098b63b54e5be16cd83af647
Note You need to log in before you can comment on or make changes to this bug.