2010-03-24  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

Reviewed by Laszlo Gombos.

        Auto-uppercase and predictive text need to be disabled for S60 (as for maemo)
        https://bugs.webkit.org/show_bug.cgi?id=33176

        * WebCoreSupport/EditorClientQt.cpp:

Canonical link: https://commits.webkit.org/47752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56458 268f45cc-cd09-0410-ab3c-d52691b4dbfc